--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bowser": "^2.11.0",
     "classnames": "^2.5.1",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.18.2",
     "gltfjsx": "^6.5.3",
     "gsap": "npm:@gsap/shockingly@^3.12.5",
     "leva": "^0.9.35",
